--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Aradığınız haberleri bulacağınız haberin sitesi HaberiBul.com"
+      content="Güncel en son dakika canlı gündem spor magazin flash haber ve haberler ajans HaberiBul.com"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
@@ -24,6 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+
     <title>Haberi Bul</title>
   </head>
   <body>
