feat: Seo and rename web app to .com

--- a/public/index.html
+++ b/public/index.html
@@ -26,8 +26,8 @@
 
 <body>
   <noscript>Javascript gerekmektedir</noscript>
-  <div id="root"></div>
-  <!--
+  <div id="root">Haberi bul</div>
+  <!--TODO bkalafat buraya çok ufak heartbeat bir logo koy.
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
 
