--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="tr">
 
 <head>
   <meta charset="utf-8" />
@@ -33,6 +33,8 @@
 </head>
 
 <body>
+
+
   <noscript>Javascript gerekmektedir</noscript>
   <div id="root">Haberi bul</div>
   <!--TODO bkalafat buraya çok ufak heartbeat bir logo koy.
@@ -70,6 +72,16 @@
     firebase.analytics();
   </script>
 
+
+  <script type="text/javascript">
+    function googleTranslateElementInit() {
+      new google.translate.TranslateElement({ pageLanguage: 'tr' }, 'google_translate_element');
+    }
+  </script>
+
+  <script type="text/javascript"
+    src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
+  <div id="google_translate_element"></div>
 </body>
 
 </html>
