--- a/public/index.html
+++ b/public/index.html
@@ -3,11 +3,14 @@
 
 <head>
   <meta charset="utf-8" />
+  <meta name ="title"/>
+  <meta name="description"
+    content="Güncel en son dakika canlı gündem spor magazin flash haber ve haberler ajans HaberiBul.com" />
   <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
   <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-  <link rel="manifest" href="/site.webmanifest">
+  <link rel="manifest" href="%PUBLIC_URL%/site.webmanifest">
   <link rel="preconnect" href="https://via.placeholder.com">
   <link rel="preconnect" href="https://www.googletagmanager.com">
   <link rel="preconnect" href="https://firebaseinstallations.googleapis.com">
