fix: Seo h4 detail caption category caption

--- a/public/index.html
+++ b/public/index.html
@@ -39,8 +39,8 @@
 </head>
 
 <body>
-  <noscript>Javascript gerekmektedir</noscript>
-  <div id="root">Haberi bul</div>
+  <noscript> Haberi bul haberibul haberibul.com son dakika güncel ekonomi </noscript>
+  <div id="root"> Haberibul </div>
   <!--TODO bkalafat buraya çok ufak heartbeat bir logo koy.
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
