feat: Seo og facebook twitter

--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8" />
-  <meta name="title" />
+  <meta name="title" content="Haberibul.com" />
   <meta name="description"
     content="Güncel en son dakika canlı gündem spor magazin flash haber ve haberler ajans HaberiBul.com" />
 
