--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,9 @@
   <meta name="title" content="Haberibul.com" />
   <meta name="description"
     content="Güncel en son dakika canlı gündem spor magazin flash haber ve haberler ajans HaberiBul.com" />
-
+  ​<meta name="googlebot" content="all" />
+  <meta name="publisher" content="Burak Kalafat" />
+  <meta name="author" content="Burak Kalafat" />
   <link rel="apple-touch-icon" sizes="180x180" href="%PUBLIC_URL%/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="%PUBLIC_URL%/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="%PUBLIC_URL%/favicon-16x16.png">
