style: Resize logo and add long description

--- a/public/index.html
+++ b/public/index.html
@@ -5,8 +5,7 @@
   <meta charset="utf-8" />
   <meta name="title" content="Haberibul.com" />
   <meta name="description"
-    content="Güncel en son dakika canlı gündem spor magazin flash haber ve haberler ajans HaberiBul.com" />
-  ​<meta name="googlebot" content="all" />
+    content="Türküye'nin en güncel, en tarafsız, en doğru haberlerinin adresi haberibul.com. Siyasetten, ekonomiye, teknolojiden, sağlığa en flaş haberleri bul, magazinden, yerel son dakika haberlere kadar en canlı gündem haberleri bul" />
   <meta name="publisher" content="Burak Kalafat" />
   <meta name="author" content="Burak Kalafat" />
   <link rel="apple-touch-icon" sizes="180x180" href="%PUBLIC_URL%/apple-touch-icon.png">
