--- a/public/index.html
+++ b/public/index.html
@@ -6,8 +6,8 @@
   <meta name="title" content="Haberibul.com" />
   <meta name="description"
     content="Türkiye'nin en güncel, en tarafsız, en doğru haberlerinin adresi haberibul.com. Siyasetten, ekonomiye, teknolojiden, sağlığa en flaş haberleri bul, magazinden, yerel son dakika haberlere kadar en canlı gündem haberleri bul" />
-  <meta name="publisher" content="Burak Kalafat" />
-  <meta name="author" content="Burak Kalafat" />
+  <meta name="publisher" content="Haberibul.com" />
+  <meta name="author" content="Haberibul.com" />
   <link rel="apple-touch-icon" sizes="180x180" href="%PUBLIC_URL%/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="%PUBLIC_URL%/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="%PUBLIC_URL%/favicon-16x16.png">
